login endpoint works

--- a/BloggerAIBackend/BloggerAI.API/appsettings.Development.json
+++ b/BloggerAIBackend/BloggerAI.API/appsettings.Development.json
@@ -7,5 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthenticationSettings": {
+    "JwtIssuer": "blogger@ai.com",
+    "JwtExpireDays": 180,
+    "JwtKey":  "SOME_PRIVATE_KEY_DONT_SHARE_000000000"
   }
 }
