--- a/BloggerAIBackend/BloggerAI.API.Tests/BloggerAI.API.Tests.csproj
+++ b/BloggerAIBackend/BloggerAI.API.Tests/BloggerAI.API.Tests.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="FluentAssertions" Version="8.0.1" />
+	<PackageReference Include="FluentAssertions" Version="[7.0.0]" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.12" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
 	<PackageReference Include="NSubstitute" Version="5.3.0" />
