--- a/BloggerAIBackend/BloggerAI.Domain/BloggerAI.Domain.csproj
+++ b/BloggerAIBackend/BloggerAI.Domain/BloggerAI.Domain.csproj
@@ -9,5 +9,6 @@
 	
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.12" />
   </ItemGroup>
 </Project>
